--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ This implementation supports the full POSIX set of conversions.  Consult the enc
 <tr><th>example</th><th>result</th></tr>
 </table>
 <script type="text/javascript">/* jshint browser:true, evil:true */</script>
+<script src="shim.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.min.js"></script>
 <script src="printj.js"></script>
 <script type="text/javascript">
 var table = document.getElementById("data");
