--- a/ctest/index.html
+++ b/ctest/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- printj.js (C) 2016-present SheetJS http://sheetjs.com -->
+<!-- vim: set ts=2: -->
 <html>
   <head>
     <title>Mocha</title>
