--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ This implementation supports the full POSIX set of conversions.  Consult the enc
 <script src="http://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.min.js"></script>
 <script src="printj.js"></script>
 <script type="text/javascript">
+/* eslint-env browser */
 /*global PRINTJ */
 var table = document.getElementById("data");
 var ex = [
@@ -58,8 +59,6 @@ window.onload = function() {
 		var c2 = row.insertCell(1); c2.innerHTML = "<pre>" + eval(m) + "</pre>";
 	});
 };
-</script>
-<script type="text/javascript">
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-36810333-1']);
 	_gaq.push(['_trackPageview']);
