replace git.io links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ table, td {
 </head>
 <body>
 <b>PRINTJ Live Demo</b><br />
-<a href="https://git.io/printj">Source Code Repo</a><br />
-<a href="https://git.io/printj_issues">Issues?  Something look weird?  Click here and report an issue</a><br />
+<a href="https://github.com/SheetJS/printj">Source Code Repo</a><br />
+<a href="https://github.com/SheetJS/printj/issues">Issues?  Something look weird?  Click here and report an issue</a><br />
 <br />
 <pre>
 usage: var printf = PRINTJ.sprintf;
